fixed visibility issue by some magic

--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -242,7 +242,7 @@ tr.no_border,
 
 .lb_console {
 	float: left;
-	width: auto;
+	width: 800px;
 	//min-width: 350px;
 	//max-width: 95%;
 }
